2006-07-28  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-prefs-cache.c:
    * libseahorse/seahorse-passphrase.c: Set cache unsensitive
    when agent is not available. Bug #347869
    
2006-07-28  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-prefs-cache.c: Fix crash when starting 
    seahorse-preferences. Bug #349080
    
2006-07-27  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-sharing.c: Fix crasher when twiddling 
    gconf setting for 'sharing' on and off repeatedly. 
    Bug #348770
    
2006-07-18  Adam Schreiber  <sadam@clemson.edu>

    * libcryptui/cryptui.pc.in: Added gconf dependency.
    Bug #347868.

2006-07-18  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-status.c:
    * daemon/seahorse-daemon.c:
    * daemon/seahorse-service-crypto.c:
    * libcryptui/cryptui.c:
    * libcryptui/cryptui.h:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-import.c (removed):
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-notification.c:
    * libseahorse/seahorse-signatures.c (removed):
    * plugins/applet/seahorse-applet.c:
    * plugins/nautilus/seahorse-pgp-preferences.c:
    * plugins/nautilus/seahorse-tool-progress.c:
    * plugins/nautilus/seahorse-tool.c:
    * src/main.c: libseahorse links libcryptui, pass off notifications to 
    the daemon where possible. Bug #339237
    
2006-07-18  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-service-crypto.c:
    * daemon/seahorse-service-keyset.c:
    * daemon/seahorse-service.c:
    * daemon/seahorse-service.h:
    * daemon/seahorse-service.xml:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-notification.c:
    * libseahorse/seahorse-notify.glade (added):