@@ -36,6 +36,7 @@
 #define SEAHORSE_STOCK_SIGN_OK      "seahorse-sign-ok"
 #define SEAHORSE_STOCK_SIGN_BAD     "seahorse-sign-bad"
 #define SEAHORSE_STOCK_SIGN_UNKNOWN "seahorse-sign-unknown"
+#define SEAHORSE_STOCK_SHARING      "seahorse-share-keys"
 
 void    seahorse_gtkstock_init          (void);
 
