@@ -1002,10 +1002,10 @@ it to the Session manager. </property>
 		  <property name="spacing">6</property>
 
 		  <child>
-		    <widget class="GtkImage" id="image3">
+		    <widget class="GtkImage" id="key-sharing-image">
 		      <property name="visible">True</property>
-		      <property name="stock">gtk-dialog-info</property>
 		      <property name="icon_size">6</property>
+		      <property name="icon_name">seahorse-share-keys</property>
 		      <property name="xalign">0.5</property>
 		      <property name="yalign">0</property>
 		      <property name="xpad">0</property>
