@@ -1,5 +1,14 @@
 2006-07-28  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * daemon/seahorse-sharing.c:
+    * libseahorse/seahorse-gtkstock.c:
+    * libseahorse/seahorse-gtkstock.h:
+    * libseahorse/seahorse-prefs.c:
+    * libseahorse/seahorse-prefs.glade: Removed notification icon for 
+    key sharing, added icon to prefs dialog.
+    
+2006-07-28  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-prefs-cache.c:
     * libseahorse/seahorse-passphrase.c: Set cache unsensitive
     when agent is not available. Bug #347869
